--- a/src/app/containers/baidu-map/baidu-map.html
+++ b/src/app/containers/baidu-map/baidu-map.html
@@ -14,6 +14,7 @@
     <div class="btn" (click)="AddPolyline()">拆线</div>
     <div class="btn" (click)="AddDefinedOverlay()">自定义</div>
     <div class="btn" (click)="AddPosition()">创建位置</div>
+    <div class="btn" (click)="AddPlace()">添加聚会地址</div>
   </div>
 
 </div>
