--- a/src/app/components/Map/PlaceItem/PlaceItem.html
+++ b/src/app/components/Map/PlaceItem/PlaceItem.html
@@ -1,22 +1,19 @@
 <div class="placeItem">
   <div class="title">
-    聚会点：
+    聚会点
   </div>
   <div class="address">
-    <input disabled type="text" required [(ngModel)]="place.address">
+    <input disabled type="text" required [(ngModel)]="place.Address">
   </div>
   <div class="date">
     <div class="title">开始时间：</div>
-    <input type="date" required [(ngModel)]="place.begin">
+    <input type="date" required [(ngModel)]="place.BeginDate">
   </div>
   <div class="date">
     <div class="title">结束时间：</div>
-    <input type="date" required [(ngModel)]="place.end">
+    <input type="date" required [(ngModel)]="place.EndDate">
   </div>
-  <div>
-
-  </div>
-  <button (click)="onClickBtn(1)">保存</button>
+  <!-- <button (click)="onClickBtn(1)">保存</button>
   <button (click)="onClickBtn(2)">删除</button>
-  <button (click)="onClickBtn(3)">修改</button>
+  <button (click)="onClickBtn(3)">修改</button> -->
 </div>
