--- a/src/app/components/Map/PlaceItem/PlaceItem.scss
+++ b/src/app/components/Map/PlaceItem/PlaceItem.scss
@@ -1,3 +1,33 @@
 .placeItem {
-  width: calc(100vw - 40px);
+  position: relative;
+  width: 80vw; // calc(100vw - 100px);
+  .title {
+    padding: 10px 5px;
+  }
+  .address {
+    padding: 5px;
+    position: relative;
+
+    input {
+      position: relative;
+      width: 100%;
+      padding: 5px 0px;
+      border: 1px solid #c4c4ea;
+      border-radius: 5px;
+      padding-left: 5px;
+    }
+  }
+
+  .date {
+    position: relative;
+    display: flex;
+    align-items: center;
+    input {
+      flex: 1;
+      padding: 2px 0px;
+      border: 1px solid #c4c4ea;
+      border-radius: 5px;
+      padding-left: 5px;
+    }
+  }
 }
