--- a/src/app/components/model/Dialog/Dialog.scss
+++ b/src/app/components/model/Dialog/Dialog.scss
@@ -6,9 +6,10 @@
   -webkit-box-pack: center;
   width: 100%;
   height: 100%;
+  font-size: 12px;
 
   .bgInfo {
-    background: rgba(0,0,0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     height: 100%;
     width: 100%;
     position: fixed;
@@ -16,11 +17,48 @@
 
   .content {
     position: relative;
-    background: #fff;
-    border: 1px solid #f5f5f5;
-    padding: 10px;
-    border-radius: 5px;
+    background: #fff; // border: 1px solid #f5f5f5;
     margin: 10px;
-  }
+    border-radius: 5px;
 
+    .title {
+      text-align: center;
+      padding: 5px 10px;
+      border-bottom: 1px solid #ddddf3;
+    }
+    .data {
+      padding: 10px;
+    }
+
+    .btns {
+      display: flex;
+      border-top: 1px solid #f5dfdf;
+      >div {
+        flex: 1;
+        padding: 10px;
+        text-align: center;
+      }
+
+      .action {
+        color: #1d1c1c;
+        border: 1px solid #c4c4d4;
+        padding: 9px;
+        background: #c4c4d4;
+      }
+      .confirm {
+
+        &:active {
+          border-bottom-left-radius: 5px;
+          @extend .action;
+        }
+      }
+      .cancel {
+        border-left: 1px solid #f5dfdf;
+        &:active {
+          border-bottom-right-radius: 5px;
+          @extend .action;
+        }
+      }
+    }
+  }
 }
