--- a/src/app/components/Map/PlaceItem/PlaceItem.html
+++ b/src/app/components/Map/PlaceItem/PlaceItem.html
@@ -5,6 +5,12 @@
   <div class="address">
     <input disabled type="text" required [(ngModel)]="place.Address">
   </div>
+  <div class="title">
+    描述
+  </div>
+  <div class="bewrite">
+    <textarea placeholder="请填写描述部分(200字以空)" [(ngModel)]="place.Bewrite" maxlength="200"></textarea>
+  </div>
   <div class="date">
     <div class="title">开始时间：</div>
     <input type="date" required [(ngModel)]="place.BeginDate">
@@ -13,7 +19,4 @@
     <div class="title">结束时间：</div>
     <input type="date" required [(ngModel)]="place.EndDate">
   </div>
-  <!-- <button (click)="onClickBtn(1)">保存</button>
-  <button (click)="onClickBtn(2)">删除</button>
-  <button (click)="onClickBtn(3)">修改</button> -->
 </div>
