--- a/src/app/containers/baidu-map/baidu-map.html
+++ b/src/app/containers/baidu-map/baidu-map.html
@@ -7,14 +7,15 @@
   </div>
 
   <div class="groupBtn">
-    <div class="btn" (click)="CreateTravel()">创建</div>
+    <!-- <div class="btn" (click)="CreateTravel()">创建</div>
     <div class="btn" (click)="GetCurrentPosition()">获取位置</div>
     <div class="btn" (click)="NavigationControl()">导航</div>
     <div class="btn" (click)="AddInfomation()">信息</div>
     <div class="btn" (click)="AddPolyline()">拆线</div>
     <div class="btn" (click)="AddDefinedOverlay()">自定义</div>
-    <div class="btn" (click)="AddPosition()">创建位置</div>
+    <div class="btn" (click)="AddPosition()">创建位置</div> -->
     <div class="btn" (click)="AddPlace()">添加聚会地址</div>
+    <div class="btn" (click)="onClickMyPlaceList()">我发起的</div>
   </div>
 
 </div>
