--- a/src/app/components/model/Dialog/Dialog.scss
+++ b/src/app/components/model/Dialog/Dialog.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100%;
   font-size: 12px;
+  top: 0;
 
   .bgInfo {
     background: rgba(0, 0, 0, 0.2);
@@ -17,7 +18,7 @@
 
   .content {
     position: relative;
-    background: #fff; // border: 1px solid #f5f5f5;
+    background: #fff;
     margin: 10px;
     border-radius: 5px;
 
@@ -26,6 +27,7 @@
       padding: 5px 10px;
       border-bottom: 1px solid #ddddf3;
     }
+
     .data {
       padding: 10px;
     }
@@ -33,7 +35,8 @@
     .btns {
       display: flex;
       border-top: 1px solid #f5dfdf;
-      >div {
+
+      > div {
         flex: 1;
         padding: 10px;
         text-align: center;
@@ -45,15 +48,17 @@
         padding: 9px;
         background: #c4c4d4;
       }
-      .confirm {
 
+      .confirm {
         &:active {
           border-bottom-left-radius: 5px;
           @extend .action;
         }
       }
+
       .cancel {
         border-left: 1px solid #f5dfdf;
+
         &:active {
           border-bottom-right-radius: 5px;
           @extend .action;
