实现弹出动画

--- a/src/app/components/model/Dialog/Dialog.html
+++ b/src/app/components/model/Dialog/Dialog.html
@@ -2,7 +2,7 @@
   <div class="bgInfo" (click)="onClickClose()">
 
   </div>
-  <div class="content">
+  <div class="content" [@heroState]="TriggerStateName">
     <div *ngIf="!!DialogInfo.IsShowTitle" class="title">
       <div>{{DialogInfo.Title}}</div>
     </div>
