关闭对话框的时候，添加动画过渡。

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <xtn-mode-action-sheet *ngIf="ActionSheetInfo" [ActionSheetInfo]="ActionSheetInfo">
 </xtn-mode-action-sheet>
 <div *ngIf="DialogList.length>0">
-  <div *ngFor="let item of DialogList;let i = index;">
-    <xtn-mode-dialog [(DialogInfo)]="DialogList[i]"></xtn-mode-dialog>
+  <div *ngFor="let item of DialogList;let i = index; let a = item;">
+    <xtn-mode-dialog [(DialogInfo)]="DialogList[i]" [Index]="i"></xtn-mode-dialog>
   </div>
 </div>
