--- a/src/app/components/model/ActionSheet/ActionSheet.scss
+++ b/src/app/components/model/ActionSheet/ActionSheet.scss
@@ -18,7 +18,7 @@
     left: 5%;
     justify-content: center;
     text-align: center;
-    border: 1px solid;
+    border: 1px solid #f0f0f0;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom: none;
@@ -32,7 +32,7 @@
     .splitline {
       width: 100%;
       height: 1px;
-      background: #000;
+      background: #cde8f7;
     }
 
     .content {
