--- a/src/app/manage/login/login.html
+++ b/src/app/manage/login/login.html
@@ -14,12 +14,12 @@
   <div class="operator">
     <div class="btn" (click)="submit()">
       <div class="login">
-        login
+        登录
       </div>
     </div>
     <div class="btn">
       <div class="forget" (click)="forgetPassword()">
-        forget
+        忘记密码
       </div>
     </div>
   </div>
