--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -45,6 +45,18 @@
     }
   }
 
+  .areaInfo {
+    display: flex;
+    margin-bottom: 5px;
+    border: 1px solid #e0e0e0;
+    padding: 5px;
+    border-radius: 5px;
+
+    .name {
+      margin-left: 5px;
+    }
+  }
+
 }
 
 .homeComCssEnd {
