刷新组件，基本OK了，上拉动画还没有实现，事件触发已经完成了，也能调到接口了。

--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -15,7 +15,7 @@
     </div>
 
   </div>
-  <xtn-scroll [IsNextPageFinish]="ScrollInfo.IsNextPageFinish" [IsRefreshFinish]="ScrollInfo.IsRefreshFinish" (onRefresh)="onScrollRefresh()"
+  <xtn-scroll [Percentage]="9" [IsNextPageFinish]="ScrollInfo.IsNextPageFinish" [IsRefreshFinish]="ScrollInfo.IsRefreshFinish" (onRefresh)="onScrollRefresh()"
     (onNextPage)="onScrollNextPage()" (onSlideLeft)="onSlideLeft()" (onSlideRight)="onSlideRight()">
     <div *ngIf="AreaInfo && AreaInfo.List && AreaInfo.List.length>0">
       <div class="areaInfo" *ngFor="let item of AreaInfo.List">
