--- a/src/app/components/Scroll/Scroll.html
+++ b/src/app/components/Scroll/Scroll.html
@@ -1,10 +1,10 @@
 <div class="scrollCss" (touchstart)="OnTouchStart($event)" (touchmove)="OnTouchMove($event)" (touchend)="OnTouchEnd($event)">
-  <div #divTop class="top" [@Top50]="Top50Name">
+  <div #divTop class="top">
     <div class="title">{{Info.TitleTop}}</div>
   </div>
   <ng-content #divContent></ng-content>
   <div #divBottom class="bottom">
-    <div>Info.TitleBottom</div>
+    <div class="title">{{Info.TitleBottom}}</div>
   </div>
 
 </div>
