--- a/src/app/containers/baidu-map/baidu-map.html
+++ b/src/app/containers/baidu-map/baidu-map.html
@@ -15,6 +15,7 @@
     <div class="btn" (click)="AddPosition()">创建位置</div> -->
     <div class="btn" (click)="AddPlace()">添加聚会地址</div>
     <div class="btn" (click)="onClickMyPlaceList()">我发起的</div>
+    <div class="btn" (click)="onClickMyJoin()">我要加入</div>
   </div>
 
 </div>
