--- a/src/app/manageapi/apilist/apilist.html
+++ b/src/app/manageapi/apilist/apilist.html
@@ -1,6 +1,10 @@
 <div class="apiListCss">
+  <div class="token">
+    Token信息里的字段分别为：tokenUserId, deadline, tokenId
+  </div>
   <div class="apiInfo">
     <div class="api">
+      <div class="methodCn">Id</div>
       <div class="methodCn">类型</div>
       <div class="method">类型</div>
       <div class="statu">状态</div>
@@ -10,6 +14,7 @@
     </div>
     <div *ngFor="let item of ApiList;let i = index;">
       <div class="api" (click)="onClickExpand(item)">
+        <div class="method">{{item.Id}}</div>
         <div class="method">{{item.Method}}</div>
         <div class="method">{{item.MethodCn}}</div>
         <div class="statu">{{item.StatusCn}}</div>
@@ -37,6 +42,11 @@
       <div class="btn" (click)="btnClickSave()">
         <div>
           保存接口
+        </div>
+      </div>
+      <div class="btn" (click)="onClickRefresh()">
+        <div>
+          刷新接口
         </div>
       </div>
     </div>
