--- a/src/app/manageapi/apilist/apilist.scss
+++ b/src/app/manageapi/apilist/apilist.scss
@@ -1,5 +1,10 @@
 .apiListCss {
   font-size: 12px;
+  .token {
+    font-size: 14px;
+    color: red;
+    text-align: center
+  }
   .apiInfo {
     .api {
       display: flex;
