--- a/src/app/components/Map/PlaceItem/PlaceItem.scss
+++ b/src/app/components/Map/PlaceItem/PlaceItem.scss
@@ -1,7 +1,7 @@
 .placeItem {
   position: relative;
   width: 80vw; // calc(100vw - 100px);
-
+  padding: 5px 15px 5px 10px;
   .title {
     padding: 10px 5px;
   }
