--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -8,7 +8,10 @@
       <div class="btn" (click)="__UserInfo('del')">delete</div>
       <div class="btn" (click)="__UserInfo('put')">put</div>
       <div class="btn" (click)="__ShowDialog()">
-        弹出信息
+        弹出窗体1
+      </div>
+      <div class="btn" (click)="__ShowDialog2()">
+        弹出窗体2
       </div>
     </div>
   </div>
