--- a/src/app/components/Map/PlaceItem/PlaceItem.html
+++ b/src/app/components/Map/PlaceItem/PlaceItem.html
@@ -25,4 +25,7 @@
     <div class="title">结束时间：</div>
     <input type="date" required [(ngModel)]="place.EndDate">
   </div>
+  <div>
+    <button (click)="onBtnClickModify()">测试调用事件</button>
+  </div>
 </div>
