--- a/src/app/components/rule/RuleItem.scss
+++ b/src/app/components/rule/RuleItem.scss
@@ -147,6 +147,14 @@
         }
       }
     }
+
+    .captcha {
+      border: 1px solid;
+      min-height: 90px;
+      .desc {
+        padding: 0px;
+      }
+    }
   }
 }
 
