--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -31,7 +31,6 @@
 
   .demo {
     // padding: 10px;
-
     .btns {
       display: flex;
       flex-wrap: wrap;
@@ -45,6 +44,16 @@
     }
   }
 
+  // .captcha {
+  //   padding: 10px;
+  //   border: 1px solid;
+
+  //   >div {
+  //     height: 50px;
+  //     width: 100%;
+  //   }
+  // }
+
   .areaInfo {
     display: flex;
     margin-bottom: 5px;
@@ -56,7 +65,6 @@
       margin-left: 5px;
     }
   }
-
 }
 
 .homeComCssEnd {
