--- a/src/app/manage/login/login.scss
+++ b/src/app/manage/login/login.scss
@@ -5,22 +5,28 @@
     margin-top: 20vh;
     position: relative;
 
+    input {
+      border: 1px solid #f5f5f5;
+      padding: 5px 10px;
+      border-radius: 5px;
+      flex: 1;
+      font-size: 1rem;
+    }
+
     .username {
       position: relative;
       display: flex;
-
-      input {
-        border: 1px solid #f5f5f5;
-        padding: 5px 10px;
-        border-radius: 5px;
-        flex: 1;
-        font-size: 1rem;
-      }
     }
 
     .password {
       @extend .username;
       margin-top: 2rem;
+    }
+
+    .captcha {
+      margin-top: 2rem;
+      display: flex;
+      align-items: center;
     }
   }
 
@@ -35,7 +41,7 @@
       text-align: center;
       padding: 5px 10px;
 
-      > div {
+      >div {
         padding: 5px 10px;
         border: 1px solid #999;
 
