--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -16,11 +16,14 @@
     </div>
   </div>
 
-  <div>
-    <div class="captcha" *ngIf="CommonInfo && CommonInfo.CaptchaInfo">
-      <div [innerHTML]="Catcha" (click)="__GetCaptcha()"></div>
-      <button (click)="__GetCaptcha()">获取验证码 </button>
-    </div>
+  <div class="captcha" *ngIf="CommonInfo && CommonInfo.CaptchaInfo">
+    <div [innerHTML]="Catcha" (click)="__GetCaptcha()"></div>
+    <button (click)="__GetCaptcha()">获取验证码 </button>
+  </div>
+  <div class="fileUpload">
+    <input type="file" name="" [(ngModel)]="__FileInfo" (change)="onTxtUpload($event)">
+
+    <button (click)="onBtnClickUpload()">文件上传 </button>
   </div>
 
   <xtn-scroll [Percentage]="20" [IsNextPageFinish]="ScrollInfo.IsNextPageFinish" [IsRefreshFinish]="ScrollInfo.IsRefreshFinish"
