文件上传，现在就是上传多个文件，不知道怎么处理。

--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -59,6 +59,25 @@
 
   .fileUpload {
     margin-top: 10px;
+
+    .file {
+      display: flex;
+      padding: 5px 0;
+
+      border-bottom: 1px solid #e0e0e0;
+
+      .name {
+        flex: 1;
+      }
+
+      .type {
+        margin: 0 10px;
+      }
+
+      .size {
+        margin: 0 10px;
+      }
+    }
   }
 
   .areaInfo {
