--- a/src/app/components/rule/RuleItem.html
+++ b/src/app/components/rule/RuleItem.html
@@ -147,16 +147,20 @@
         </div>
       </div>
     </div>
-    <div class="files" *ngIf="Rule.type === 'file'">
-      文件保存路径：
-      <input type="text" [ngModel]="Rule.files.filePath" disabled>
-      <div>
-        文件类型
-        <select required [(ngModel)]="Rule.files.type" (change)="onChange_FileType(Rule.files.type)">
-          <option *ngFor="let item of FileTypes" [value]="item.key">{{item.title}} </option>
-      </select>
+    <div class="files" *ngIf="Rule.type === 'files'">
+      <div class="row">
+        <label>文件路径：</label>
+        <input type="text" [ngModel]="Rule.files.filePath" disabled>
       </div>
-      <div></div>
+      <div class="row">
+        <label>文件类型：</label>
+        <select class="select" required [(ngModel)]="Rule.files.type" (change)="onChange_FileType(Rule.files.type)">
+          <option *ngFor="let item of FileTypes" [value]="item.key">{{item.title}} </option>
+        </select>
+      </div>
+      <div class="desc">
+        保存成功后，会有几个默认的字段，filepath,filename，可以直接获取，在对数据库进行操作的时候可以 :filepath,:filename获取值
+      </div>
     </div>
   </div>
 
