批量文件上传

--- a/src/app/components/rule/RuleItem.html
+++ b/src/app/components/rule/RuleItem.html
@@ -159,7 +159,7 @@
         </select>
       </div>
       <div class="desc">
-        保存成功后，会有几个默认的字段，filepath,filename，可以直接获取，在对数据库进行操作的时候可以 :filepath,:filename获取值
+        保存成功后,会提供有几个字段,【file,name,size,type,path】可以用。
       </div>
     </div>
   </div>
