--- a/src/app/components/rule/RuleItem.html
+++ b/src/app/components/rule/RuleItem.html
@@ -148,19 +148,32 @@
       </div>
     </div>
     <div class="files" *ngIf="Rule.type === 'files'">
+      <div class="desc">
+        保存成功后,会提供有几个字段,【FileType,FileName,FilePath,FileSize】可以用。
+      </div>
+
       <div class="row">
         <label>文件路径：</label>
         <input type="text" [ngModel]="Rule.files.filePath" disabled>
-      </div>
-      <div class="row">
         <label>文件类型：</label>
         <select class="select" required [(ngModel)]="Rule.files.type" (change)="onChange_FileType(Rule.files.type)">
           <option *ngFor="let item of FileTypes" [value]="item.key">{{item.title}} </option>
         </select>
       </div>
-      <div class="desc">
-        保存成功后,会提供有几个字段,【file,name,size,type,path】可以用。
+
+      <div class="relation">
+        <input type="text" [(ngModel)]="Rule.files.Relation.TableName" placeholder="表名">
+        <div class="relaField" *ngFor="let rField of Rule.files.Relation.Fields;let i = index">
+          <label for="">表字段：</label>
+          <input type="text" [(ngModel)]="rField.TabelFieldName">
+          <label for=""> 关联取值字段：</label>
+          <input type="text" [(ngModel)]="rField.RelationFieldName" placeholder="描述中的字段" title="默认是从fileList信息中获取，其实就是从options里取，最后就是字段以内容当作存储">
+          <button (click)="btnAddFileRelationField(i,Rule.files.Relation.Fields)">添加</button>
+          <button (click)="btnDeleteFileRelationField(i,Rule.files.Relation.Fields)">删除</button>
+        </div>
       </div>
+
+
     </div>
   </div>
 
