--- a/src/app/components/rule/RuleItem.scss
+++ b/src/app/components/rule/RuleItem.scss
@@ -1,6 +1,5 @@
 .rulItemCss {
   display: flex;
-  align-items: center;
   .row {
     padding-top: 5px;
 
@@ -178,6 +177,19 @@
         color: red;
         font-weight: 700;
         line-height: 1.8;
+      }
+
+      .relation {
+
+        .relaField {
+          display: flex;
+          white-space: nowrap;
+          align-items: center;
+          input {
+            flex: 1;
+            width: 100%;
+          }
+        }
       }
     }
   }
